<resources>
    <string name="app_name">Sketches@Android</string>
    <string name="sketches">Sketches</string>
    <string name="solid_color">Solid Color</string>
    <string name="gallery">Gallery Image</string>
    <string name="photo">Photo</string>
    <string name="history">History</string>
    <string name="todo">To be developed…</string>
    <string name="ask_title">Title:</string>
    <string name="hint_title">Sketch title</string>
    <string name="ask_background_color">Background Color:</string>
    <string name="ask_red" translatable="false">R:</string>
    <string name="ask_green" translatable="false">G:</string>
    <string name="ask_blue" translatable="false">B:</string>
    <string name="msg_empty_title">You must give a title</string>
    <string name="str_no_name">No name</string>
    <string name="create">Create</string>
    <string name="mn_save">Save</string>
    <string name="mn_white">White</string>
    <string name="mn_yellow">Yellow</string>
    <string name="mn_blue">Blue</string>
    <string name="mn_black">Black</string>
    <string name="ask_background_image">Background image:</string>
    <string name="btn_choose_image">Choose image</string>
    <string name="btn_take_photo">Take photo</string>
    <string name="msg_no_image">No image defined</string>
    <string name="history_title">Saved sketches</string>
</resources>