<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ic_sketches_background"
    tools:context=".MainActivity">

    <TextView
        android:layout_margin="16dp"
        android:textColor="@color/white"
        android:padding="32dp"
        android:textSize="32sp"
        android:background="@color/color_c1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:text="@string/sketches" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp"
        android:layout_gravity="bottom|center_horizontal">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/solid_color"
            android:textSize="24sp"
            android:padding="16dp"
            android:layout_margin="8dp"
            android:id="@+id/solidColor"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gallery"
            android:textSize="24sp"
            android:padding="16dp"
            android:layout_margin="8dp"
            android:id="@+id/gallery"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/photo"
            android:textSize="24sp"
            android:padding="16dp"
            android:layout_margin="8dp"
            android:id="@+id/photo"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/history"
            android:textSize="24sp"
            android:padding="16dp"
            android:layout_margin="8dp"
            android:id="@+id/history"/>
    </LinearLayout>

</FrameLayout>